fix: add an invisible input to the wordle in mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -798,3 +798,10 @@ section {
   text-align: center;
   font-weight: 600;
 }
+
+.hidden-wordle-input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  height: 0;
+}
